fix: improve file naming to align with property name

--- a/src/indent-guide.css
+++ b/src/indent-guide.css
@@ -1,4 +1,4 @@
-.cm-indent-guides {
+.cm-indent-guide {
   position: relative;
   border-left: 1px dotted #bbb;
 }
